--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -1270,24 +1270,31 @@
                     return;
                 }
 
-                resultsList.innerHTML = data.models.map(model => `
+                resultsList.innerHTML = data.models.map(model => {
+                    // Extract author from model ID (format: "author/model-name")
+                    const modelId = model.id || model.name || '';
+                    const parts = modelId.split('/');
+                    const author = parts.length > 1 ? parts[0] : (model.author || 'Unknown Author');
+                    const modelName = parts.length > 1 ? parts.slice(1).join('/') : modelId;
+                    
+                    return `
                     <div class="card rounded-xl p-4 hover:border-accent-primary/50 transition-all">
                         <div class="flex items-start justify-between gap-4">
                             <div class="flex-1 min-w-0">
-                                <h3 class="font-bold text-white mb-1 truncate">${escapeHtml(model.id || model.name)}</h3>
-                                <p class="text-xs text-gray-500 mb-2">${escapeHtml(model.author || 'Unknown Author')}</p>
+                                <h3 class="font-bold text-white mb-1 truncate">${escapeHtml(modelName)}</h3>
+                                <p class="text-xs text-gray-500 mb-2">${escapeHtml(author)}</p>
                                 ${model.description ? `<p class="text-xs text-gray-400 line-clamp-2">${escapeHtml(model.description)}</p>` : ''}
                                 <div class="flex gap-2 mt-2">
                                     ${model.downloads ? `<span class="text-xs text-gray-500">↓ ${formatNumber(model.downloads)}</span>` : ''}
                                     ${model.likes ? `<span class="text-xs text-gray-500">♥ ${formatNumber(model.likes)}</span>` : ''}
                                 </div>
                             </div>
-                            <button onclick="downloadFromSearch('${escapeHtml(model.id || model.name)}')" class="btn-primary px-4 py-2 rounded-lg text-xs font-medium whitespace-nowrap">
+                            <button onclick="downloadFromSearch('${escapeHtml(modelId)}')" class="btn-primary px-4 py-2 rounded-lg text-xs font-medium whitespace-nowrap">
                                 Download
                             </button>
                         </div>
                     </div>
-                `).join('');
+                `}).join('');
             } catch (err) {
                 console.error('Search failed:', err);
                 resultsList.innerHTML = `<div class="text-center py-8 text-red-400">Search failed: ${escapeHtml(err.message)}</div>`;
