Fix UI chat to use offgrid server instead of direct llama-server connection
Changes:
- Changed fetch URL from http://localhost:42382/v1/chat/completions to /v1/chat/completions
- Now routes through offgrid server (proper architecture)
- Added model parameter to chat completions request
- All API calls now use relative URLs for consistency

Benefits:
- No hardcoded ports
- Works with proxy/firewall configurations
- Proper request routing through offgrid middleware
- Better error handling and logging

--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -296,10 +296,11 @@ offgrid doctor               # System diagnostics</code></pre>
             addMessage('user', message);
 
             try {
-                const response = await fetch('http://localhost:42382/v1/chat/completions', {
+                const response = await fetch('/v1/chat/completions', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
+                        model: currentModel,
                         messages: chatMessages,
                         stream: document.getElementById('streamMode').checked,
                         temperature: 0.7,
