Fix UI model loading to handle API response format
Issues fixed:
- Model dropdown not populating (was looking for wrong field)
- API returns {data: [...]} but UI expected models array directly
- Changed to handle multiple response formats: result.data || result.models || result
- Fixed model ID extraction to use m.id || m.name || m
- Applied fixes to:
  * loadModelsForChat() - Chat tab dropdown
  * loadInstalledModels() - Library tab
  * loadCatalog() - Catalog view

Now properly handles OpenAI-compatible /v1/models response format

--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -246,13 +246,14 @@ offgrid doctor               # System diagnostics</code></pre>
         async function loadModelsForChat() {
             try {
                 const response = await fetch('/models');
-                const models = await response.json();
+                const result = await response.json();
+                const models = result.data || result.models || result;
                 const select = document.getElementById('chatModelSelect');
                 select.innerHTML = '<option value="">Select Model...</option>';
                 models.forEach(m => {
                     const opt = document.createElement('option');
-                    opt.value = m.name || m;
-                    opt.textContent = m.name || m;
+                    opt.value = m.id || m.name || m;
+                    opt.textContent = m.id || m.name || m;
                     select.appendChild(opt);
                 });
             } catch (error) {
