Fix UI initialization - load models on page load
Issues fixed:
- Model dropdown wasn't populated on initial page load
- loadModelsForChat() only triggered on tab click
- Chat tab is active by default, so click never fired
- Added initialization call to loadModelsForChat() on page load
- Added better error handling with user-visible error message
- Models now load automatically when page opens

Now dropdown populates immediately without needing to switch tabs

--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -258,6 +258,9 @@ offgrid doctor               # System diagnostics</code></pre>
                 });
             } catch (error) {
                 console.error('Failed to load models:', error);
+                console.error('Response:', error);
+                const select = document.getElementById('chatModelSelect');
+                select.innerHTML = '<option value="">⚠ Failed to load models</option>';
             }
         }
 
@@ -474,6 +477,7 @@ offgrid doctor               # System diagnostics</code></pre>
         });
 
         document.getElementById('tab-chat').addEventListener('click', loadModelsForChat);
+        loadModelsForChat();
         loadSystemHealth();
         setInterval(loadSystemHealth, 5000);
     </script>
