Fix model switching lockup bug
When switching models, the pendingRequest flag wasn't being reset,
causing the UI to remain locked and unable to send messages.

This fix ensures the flag is cleared when a model switch occurs,
allowing users to send messages immediately after switching.

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1389,6 +1389,7 @@
                 const chatMessages = document.getElementById('chatMessages');
                 chatMessages.innerHTML = '';
                 updateChatStats();
+                pendingRequest = false; // Reset the flag so user can send messages
                 return; // Don't send a message on model switch
             }
             currentModel = model;
