Fix model switching and loading performance
Critical fixes:
1. Remove early return on model switch - allow messages to send
2. Simplify waitForReady - just wait for server start (7.5s vs 120s)
3. Add retry logic with backoff for 503 errors in inference engine
4. Kill pre-existing llama-servers on startup to avoid port conflicts
5. Models now properly cache on different ports (42382-42384)

This fixes:
- Model switching blocking message send
- Extremely slow model loading times
- Port conflicts with pre-existing servers
- UI lockup when switching models

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1381,17 +1381,7 @@
                 return;
             }
 
-            // Check model switch
-            if (currentModel && model !== currentModel) {
-                // Switch model and clear conversation
-                currentModel = model;
-                messages = [];
-                const chatMessages = document.getElementById('chatMessages');
-                chatMessages.innerHTML = '';
-                updateChatStats();
-                pendingRequest = false; // Reset the flag so user can send messages
-                return; // Don't send a message on model switch
-            }
+            // Update current model (allow switching without blocking message send)
             currentModel = model;
 
             const sendBtn = document.getElementById('sendBtn');
