Fix 500/503 errors and improve error handling
Critical fixes:
1. Remove premature health check in Load() - let retry logic handle it
2. Better error messages for 503/500 errors
3. Clearer feedback when model is loading
4. Health check was failing with 503 during model load

This fixes:
- 500 Internal Server Error on first message
- Model switching getting stuck
- Poor user feedback during loading
- Health check race condition

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1598,7 +1598,16 @@
                 } else {
                     const errorMsg = error.message || 'Unknown error occurred';
                     console.error('Chat error:', error);
-                    addChatMessage('assistant', `⚠ Error: ${errorMsg}\n\nPlease check if the model is loaded and the server is running properly.`, startTime);
+                    
+                    // Better error messages for common issues
+                    let userMessage = `⚠ Error: ${errorMsg}`;
+                    if (errorMsg.includes('503') || errorMsg.includes('Failed to load model')) {
+                        userMessage = `⚠ Model is taking longer than expected to load.\n\nThis can happen on slower systems. Please try again in a few moments.`;
+                    } else if (errorMsg.includes('500')) {
+                        userMessage = `⚠ Server error occurred.\n\nThe model may still be loading. Please wait a moment and try again.`;
+                    }
+                    
+                    addChatMessage('assistant', userMessage, startTime);
                     statusBadge.className = 'text-xs font-medium text-red-400';
                     statusBadge.textContent = 'Error';
                 }
