Fix terminal text wrapping to prevent horizontal overflow
Terminal Display Fixes:
- Changed white-space from 'pre' to 'pre-wrap' for proper line wrapping
- Added word-wrap, word-break, and overflow-wrap to handle long text
- Set overflow-x: hidden on terminal-output container
- Prevents text from being cut off or requiring horizontal scroll

Long error messages and URLs now wrap properly within the terminal
window instead of being truncated or causing horizontal scrolling.

Fixes issue where terminal content like error messages with long URLs
were not fully visible.

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -302,16 +302,20 @@
         .terminal-output { 
             height: 500px;
             overflow-y: auto; 
+            overflow-x: hidden;
             margin-bottom: 12px; 
             line-height: 1.6;
             background: #1e1e1e;
+            word-wrap: break-word;
         }
         
         .terminal-line { 
             color: #d4d4d4; 
             margin-bottom: 2px; 
-            white-space: pre; 
+            white-space: pre-wrap; 
+            word-wrap: break-word; 
             word-break: break-word; 
+            overflow-wrap: break-word;
             font-family: 'Monaco', 'Consolas', 'Courier New', monospace;
         }
         
