Increase frontend search timeout to match backend
Frontend timeout was 15s but backend HuggingFace API can take 20-30s
through the proxy. Increased to 35s to allow backend's 30s timeout
to complete before frontend aborts.

This prevents 'AbortError: signal is aborted' when searching models.

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1887,7 +1887,7 @@
             try {
                 // Add timeout to prevent hanging
                 const controller = new AbortController();
-                const timeoutId = setTimeout(() => controller.abort(), 15000); // 15 second timeout
+                const timeoutId = setTimeout(() => controller.abort(), 35000); // 35 second timeout (backend has 30s)
                 
                 const resp = await fetch(`/v1/search?query=${encodeURIComponent(query)}`, {
                     signal: controller.signal
