--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -1887,7 +1887,7 @@
             try {
                 // Add timeout to prevent hanging
                 const controller = new AbortController();
-                const timeoutId = setTimeout(() => controller.abort(), 15000); // 15 second timeout
+                const timeoutId = setTimeout(() => controller.abort(), 35000); // 35 second timeout (backend has 30s)
                 
                 const resp = await fetch(`/v1/search?query=${encodeURIComponent(query)}`, {
                     signal: controller.signal
