--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1052,7 +1052,7 @@
         <div class="sidebar-footer">
             <div class="flex items-center gap-2">
                 <span id="statusBadge" class="badge badge-success">Ready</span>
-                <span class="text-xs text-secondary">v0.2..0</span>
+                <span class="text-xs text-secondary">v0.2.1</span>
             </div>
             <button id="theme-toggle" class="p-2 rounded-lg hover:bg-tertiary transition-colors text-secondary hover:text-primary" title="Toggle Theme">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -1697,7 +1697,7 @@
                     </div>
                 </div>
                 <div class="terminal-output scrollable flex-1 overflow-y-auto" id="terminalOutput">
-                    <div class="terminal-line terminal-success">OffGrid Terminal v0.2..0</div>
+                    <div class="terminal-line terminal-success">OffGrid Terminal v0.2.1</div>
                     <div class="terminal-line">Connected to real offgrid binary</div>
                     <div class="terminal-line">Type 'help' for available commands or 'offgrid --help' for all options</div>
                 </div>
@@ -4202,7 +4202,7 @@
         function clearTerminal() {
             terminalOutputBuffer = ''; // Clear any buffered output
             document.getElementById('terminalOutput').innerHTML = `
-                <div class="terminal-line terminal-success">OffGrid Terminal v0.2..0</div>
+                <div class="terminal-line terminal-success">OffGrid Terminal v0.2.1</div>
                 <div class="terminal-line">Connected to real offgrid binary</div>
                 <div class="terminal-line">Type 'help' for available commands or 'offgrid --help' for all options</div>
             `;
