--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -1659,7 +1659,7 @@ Type 'help' for available commands or 'offgrid --help' for all options
                                 </div>
                             </div>
                         </div>
-                        <p id="whisperModelHint" class="text-xs text-yellow-400 mb-3 hidden">⚠️ Use multilingual model for non-English languages</p>
+                        <p id="whisperModelHint" class="text-xs text-yellow-400 mb-3 hidden">Use multilingual model for non-English languages</p>
                         
                         <!-- Push-to-Talk Interface -->
                         <div class="flex flex-col items-center py-6 border-t border-theme">
