--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -2574,6 +2574,7 @@
 
     <!-- Modular JavaScript Files -->
     <script src="/ui/js/utils.js?v=0.2.10"></script>
+    <script src="/ui/js/model-manager.js?v=0.2.10"></script>
     <script src="/ui/js/onboarding.js?v=0.2.10"></script>
     <script src="/ui/js/status.js?v=0.2.10"></script>
     <script src="/ui/js/modals.js?v=0.2.10"></script>
